          suite run, and again at the end of it (only if necessary)
        - added sample crontab file for automated CI testing at startup
        - meta_erase() now accepts a second parameter, $all. If left or set
          false, we'll leave the 'storage' shared memory data intact, if true,
          we'll delete it with everything else

2.3633_03 2019-11-18
        - added rpi_sudo_check() in RPiTest. All test files that sudo needs to
          call this function before any work is done (fixes #144)
        - added RPI_POD, RPI_SUDO and RPI_OBJECT_COUNT testing environment
          variables
        - test suite PI_BOARD check is now done in the RPiTest library, and is
          now not required in individual test files. Test files need only
          specify the env vars they require specifically (eg RPI_ADC).
          (closes #148)
        - reworked the entire cleanup() regimen and how we manage meta data. It
          only ever operates on its own object, and never crosses object
          boundaries
        - added ability to set a custom shared memory key on a per-object basis.
          This allows objects within separate processes to be 'grouped' together
          under the same shared memory segment (eg: prod and test envs can run
          separately) (closes #153)
        - removed left-over includes of IPC::Shareable. We don't use that
          distribution any longer, so it's not included as a prereq
        - added note to PWM FAQ section that root access is needed (link to sudo
          config section) (closes #158)
        - added meta_key_check() class method in Meta, to check whether a shared
          memory segment exists or not
        - pimeta and pimetaerase scripts now croak if the shared memory segment
          we're trying to work on don't yet exist (fixes #156)
        - added meta_get(), meta_set() and meta_delete(). Allows manipulation of
          user-defined data within shared memory (closes #146)