@@ -27,7 +27,7 @@ if (! $ENV{PI_BOARD}){
 
 if ($> != 0 && $ENV{RPI_SUDO}){
     print "enforcing sudo for PWM tests...\n";
-    system('sudo', 'perl', $0);
+    system("sudo", "perl", "-I", "blib/lib", $0);
     exit;
 }
 
